@@ -1,3 +1,8 @@
+2010-10-29  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/Evil.h:
+	define offsetof for Windows CE
+
 2010-10-22  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/Makefile.am:
